--- a/changelog.txt
+++ b/changelog.txt
@@ -1,1 +1,9 @@
-V0.1
+=============================================================================
+- Version & Repository: https://github.com/zakaria220/kodiStream/releases
+- Question & Support: https://github.com/zakaria220/kodiStream/issues
+=============================================================================
+- Auteurs : zakaria220
+=============================================================================
+- Version 0.0.1 - 27.01.2018
+=============================================================================
+23-01-2018 -- @zakaria220 -- Initial commit
