--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,6 @@
 =============================================================================
 - Auteurs : zakaria220
 =============================================================================
-- Version 0.0.1 - 27.01.2018
+- Current Version 0.0.1 - 27.01.2018
 =============================================================================
 23-01-2018 -- @zakaria220 -- Initial commit
