--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 =============================================================================
 - Auteurs : zakaria220
 =============================================================================
-- Version 0.0.1 - 27.01.2018
+- Version 0.0.3 - 06.02.2018
 =============================================================================
 23-01-2018 -- @zakaria220 -- Initial commit
+06-02-2018 -- @zakaria220 -- Improvement continue to watch
