--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,8 @@
 =============================================================================
 - Auteurs : zakaria220
 =============================================================================
-- Version 0.0.3 - 06.02.2018
+- Version 0.9.9 - 06.02.2018
 =============================================================================
 23-01-2018 -- @zakaria220 -- Initial commit
 06-02-2018 -- @zakaria220 -- Improvement continue to watch
+16-02-2018 -- @zakaria220 -- First stable version
