--- a/source/changelog.txt
+++ b/source/changelog.txt
@@ -4,8 +4,9 @@
 =============================================================================
 - Auteurs : zakaria220
 =============================================================================
-- Current Version 1.0.0 - 16.02.2018
+- Current Version 1.0.1 - 19.02.2018
 =============================================================================
 23-01-2018 -- @zakaria220 -- Initial commit
 06-02-2018 -- @zakaria220 -- Improvement continue to watch
 16-02-2018 -- @zakaria220 -- First stable version
+19-02-2018 -- @zakaria220 -- Update
